--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     <script src="./third_party/p5.js"></script>
-    <script src="./node_modules\matter-js\build\matter.js"></script>
+    <script src="./third_party/matter.js"></script>
     <!-- <script src="./node_modules/ccapture.js/src/CCapture.js"></script>
     <script src="./node_modules/ccapture.js/src/webm-writer-0.2.0.js"></script>
     <script src="./node_modules/ccapture.js/src/gif.js"></script>
